Remove data_replicas variable

--- a/templates/kubebot-deployment.yaml
+++ b/templates/kubebot-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     component: kubebot
 spec:
-  replicas: {{ .data_replicas }}
+  replicas: 1
   template:
     metadata:
       labels:
