--- a/values.toml
+++ b/values.toml
@@ -1,3 +1,4 @@
 kubebot_slack_token = ""
 kubebot_slack_channels_ids = ""
 kubebot_slack_admins_nicknames = ""
+kubebot_slack_valid_commands="get describe logs explain"
